<resources>
    <string name="app_name">Totally Accurate HAR</string>
    <string name="ble_name">Name: %1$s</string>
    <string name="ble_mac">MAC: %1$s</string>
    <string name="ble_signal">Signal: %1$d</string>
    <string name="ble_uuid">UUID: %1$s</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="guest">Continue as guest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_fab_animations">FAB Animation</string>
    <string name="title_activity_toolbar_test">ToolbarTestActivity</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_animate_toolbar">Animate Toolbar</string>
    <string name="title_activity_tab_animation">Tabs Animation</string>
    <string name="title_activity_sticky_view">StickyViewActivity</string>

    <string name="section_bluetooth">Welcome to the PDIoT App. Use it to connect to your Respeck or Thingy devices.</string>
    <string name="section_record">You can record data from the sensors in a locally stored csv file.</string>
    <string name="section_live">You can also view the live data once the sensors are connected.</string>
    <string name="section_bluetooth_title">Connect</string>
    <string name="section_record_title">Record</string>
    <string name="section_live_title">View</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_swipe_refresh">Swipe Refresh</string>
    <string name="title_activity_mini_drawer">Mini Drawer</string>
    <string name="title_activity_nested_toolbar">Nested Toolbar</string>
    <string name="action_search">Search</string>
    <string name="action_view_module">View</string>
    <string name="title_quick_return">Quick Return</string>
    <string name="title_activity_reveal">Reveal Animation</string>
    <string name="title_activity_reveal_animation">Reveal Animation</string>
    <string name="title_activity_launch_screen">LaunchScreenActivity</string>
    <string name="title_activity_gmail_style">Gmail List</string>
    <string name="title_activity_tabs_header">Header Tabs</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="section_format">Page %1$d</string>
    <string name="action_add">Add</string>
    <string name="android_desserts">Android Desserts</string>

    <string name="notification_speck_title">RESpeck and Airspeck</string>
    <string name="notification_speck_text">Listening for sensor data</string>
    <string name="respeck_name">RESpeck</string>

    <string name="respeck_accel">Accel = (%1$.3f, %2$.3f, %3$.3f)</string>
    <string name="respeck_gyro">Gyro = (%1$.3f, %2$.3f, %3$.3f)</string>

    <string name="thingy_accel">Accel = (%1$.3f, %2$.3f, %3$.3f)</string>
    <string name="thingy_gyro">Gyro = (%1$.3f, %2$.3f, %3$.3f)</string>
    <string name="thingy_mag">Mag = (%1$.3f, %2$.3f, %3$.3f)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 8~16 characters</string>
    <string name="password_not_match">Password is not match</string>
    <string name="invalid_chars">Password contains invalid characters</string>
    <string name="login_failed">Login failed: Wrong user id or password</string>
    <string name="register_failed">Register failed</string>

    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="invalid_unn">Please enter correct UNN.</string>

    <string name="UNN">UNN (sXXXXXXX)</string>
    <string name="tag">Sign in to view your historical activity!</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>


    <string name="viewGithub">View on GitHub</string>
    <string name="reportProblem">Problem Report</string>
    <string name="viewWebsite">Developer Website</string>
    <string name="actionSave">Save to Gallery</string>

    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>

    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>
</resources>
