<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1E6E1"
    tools:background="#D1E6E1"
    tools:context=".LoginFragment">

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="81dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="211dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:onClick="goToLiveActivity"
        android:text="@string/guest"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:layout_above="@+id/et_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="161dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="102dp"
        android:fontFamily="@font/indigo_daisy"
        android:text="@string/login"
        android:textColor="#28A499"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="#00796B"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp" />

</RelativeLayout>